--- a/front-end/무한 스크롤 고려사항.md
+++ b/front-end/무한 스크롤 고려사항.md
@@ -2,6 +2,11 @@
 * [1. 무한 스크롤](#1-무한-스크롤)
 * [2. 페이지와 컨텐츠 구성 예시](#2-페이지와-컨텐츠-구성-예시)
 * [3. 페이징과 정렬 기준](#3-페이징과-정렬-기준)
+* [4. 스크롤 위치 계산을 위해 컨텐츠는 고정 높이를 가져아 합니다.](#4-스크롤-위치-계산을-위해-컨텐츠는-고정-높이를-가져아-합니다)
+* [5. 목록 페이지와 상세 페이지에서 동기화 해야 하는 데이터 처리 방안](#5-목록-페이지와-상세-페이지에서-동기화-해야-하는-데이터-처리-방안)
+* [6. store에 무한한 데이터를 저장할 수 없습니다.](#6-store에-무한한-데이터를-저장할-수-없습니다)
+* [7. 기타 고려사항](#7-기타-고려사항)
+* [8. 성능 개선을 위한 Query 최적화](#8-성능-개선을-위한-query-최적화)
 <!-- TOC -->
 
 ---
